--- a/1.es6/index.html
+++ b/1.es6/index.html
@@ -131,6 +131,6 @@
 
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-	
+		<script src="mjs/01-let-02.js"></script>
 	</body>
 </html>
