--- a/1.es6/index.html
+++ b/1.es6/index.html
@@ -131,6 +131,6 @@
 
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="mjs/07-func-default-param.js"></script>
+		<script src="mjs/08-func-rest-param.js"></script>
 	</body>
 </html>
