--- a/2.typescript/index.html
+++ b/2.typescript/index.html
@@ -217,6 +217,6 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="./mjs/04_function/06-overload.js"></script>
+    <script src="./mjs/05_oop/01-class-02.js"></script>
   </body>
 </html>
