--- a/2.typescript/index.html
+++ b/2.typescript/index.html
@@ -217,6 +217,6 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="./mjs/05_oop/02-static.js"></script>
+    <script src="./mjs/05_oop/03-inheritance.js"></script>
   </body>
 </html>
