--- a/2.typescript/index.html
+++ b/2.typescript/index.html
@@ -218,6 +218,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- <script type="module" src="./mjs/07_module/Test.js"></script> -->
-    <script data-main="./mjs/07_module/Test" src="./js/require.js"></script>
+    <script data-main="./mjs/07_module/import" src="./js/require.js"></script>
   </body>
 </html>
