--- a/3.shopping/index.html
+++ b/3.shopping/index.html
@@ -22,127 +22,7 @@
             <div class="panel-heading">
               <h1 class="panel-title">List Products</h1>
             </div>
-            <div class="panel-body" id="list-product">
-              <div class="media product">
-                <div class="media-left">
-                  <a href="#">
-                    <img
-                      class="media-object"
-                      src="img/characters/bulbasaur.png"
-                      alt="bulbasaur"
-                    />
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">bulbasaur</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Corporis, velit.
-                  </p>
-                  <input
-                    name="quantity-product-100"
-                    type="number"
-                    value="1"
-                    min="1"
-                  />
-                  <a data-product="100" href="#" class="price"> 69 USD </a>
-                </div>
-              </div>
-              <div class="media product">
-                <div class="media-left">
-                  <a href="#">
-                    <img
-                      class="media-object"
-                      src="img/characters/charmander.png"
-                      alt="charmander"
-                    />
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">charmander</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Corporis, velit.
-                  </p>
-                  <input
-                    name="quantity-product-101"
-                    type="number"
-                    value="1"
-                    min="1"
-                  />
-                  <a data-product="101" href="#" class="price"> 18 USD </a>
-                </div>
-              </div>
-              <div class="media product">
-                <div class="media-left">
-                  <a href="#">
-                    <img
-                      class="media-object"
-                      src="img/characters/ivysaur.png"
-                      alt="ivysaur"
-                    />
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">ivysaur</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Corporis, velit.
-                  </p>
-                  <input
-                    name="quantity-product-102"
-                    type="number"
-                    value="1"
-                    min="1"
-                  />
-                  <a data-product="102" href="#" class="price"> 22 USD </a>
-                </div>
-              </div>
-              <div class="media product">
-                <div class="media-left">
-                  <a href="#">
-                    <img
-                      class="media-object"
-                      src="img/characters/squirtle.png"
-                      alt="squirtle"
-                    />
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">squirtle</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Corporis, velit.
-                  </p>
-                  <input
-                    name="quantity-product-103"
-                    type="number"
-                    value="1"
-                    min="1"
-                  />
-                  <a data-product="103" href="#" class="price"> 65 USD </a>
-                </div>
-              </div>
-              <div class="media product">
-                <div class="media-left">
-                  <a href="#">
-                    <img
-                      class="media-object"
-                      src="img/characters/venusaur.png"
-                      alt="venusaur"
-                    />
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">venusaur</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Corporis, velit.
-                  </p>
-                  <span class="price">$ 19</span>
-                </div>
-              </div>
-            </div>
+            <div class="panel-body" id="list-product"></div>
           </div>
         </div>
 
