--- a/3.shopping/index.html
+++ b/3.shopping/index.html
@@ -43,105 +43,13 @@
                     <th width="25%">Action</th>
                   </tr>
                 </thead>
-                <tbody id="my-cart-body">
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>bulbasaur</td>
-                    <td>69 USD</td>
-                    <td>
-                      <input
-                        name="cart-item-quantity-100"
-                        type="number"
-                        value="1"
-                        min="1"
-                      />
-                    </td>
-                    <td><strong>69 USD</strong></td>
-                    <td>
-                      <a
-                        class="label label-info update-cart-item"
-                        href="#"
-                        data-product="100"
-                        >Update</a
-                      >
-                      <a
-                        class="label label-danger delete-cart-item"
-                        href="#"
-                        data-product="100"
-                        >Delete</a
-                      >
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>ivysaur</td>
-                    <td>22 USD</td>
-                    <td>
-                      <input
-                        name="cart-item-quantity-102"
-                        type="number"
-                        value="3"
-                        min="1"
-                      />
-                    </td>
-                    <td><strong>66 USD</strong></td>
-                    <td>
-                      <a
-                        class="label label-info update-cart-item"
-                        href="#"
-                        data-product="102"
-                        >Update</a
-                      >
-                      <a
-                        class="label label-danger delete-cart-item"
-                        href="#"
-                        data-product="102"
-                        >Delete</a
-                      >
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>charmander</td>
-                    <td>18 USD</td>
-                    <td>
-                      <input
-                        name="cart-item-quantity-101"
-                        type="number"
-                        value="1"
-                        min="1"
-                      />
-                    </td>
-                    <td><strong>18 USD</strong></td>
-                    <td>
-                      <a
-                        class="label label-info update-cart-item"
-                        href="#"
-                        data-product="101"
-                        >Update</a
-                      >
-                      <a
-                        class="label label-danger delete-cart-item"
-                        href="#"
-                        data-product="101"
-                        >Delete</a
-                      >
-                    </td>
-                  </tr>
-                </tbody>
-                <tfoot id="my-cart-footer">
-                  <tr>
-                    <td colspan="4">
-                      There are <b>5</b> items in your shopping cart.
-                    </td>
-                    <td colspan="2" class="total-price text-left">153 USD</td>
-                  </tr>
-                </tfoot>
+                <tbody id="my-cart-body"></tbody>
+                <tfoot id="my-cart-footer"></tfoot>
               </table>
             </div>
           </div>
           <div class="alert alert-success" role="alert" id="mnotification">
-            Added successfull !!
+            Updated <b>ivysaur</b>
           </div>
         </div>
       </div>
